# mdtg-starter

./: .gitignore  CMakeLists.txt  COMMERCIAL_LICENSE  LICENSE  LICENSE.txt  NOTICE  README.md
include/mdtg/: matrix4.hpp  mdtg_node.hpp  thread_pool.hpp
src/: main.cpp  mdtg_node.cpp  thread_pool.cpp
src/benchmarks/: benchmark_deep.cpp  benchmark_geometry.cpp  benchmark_parallel.cpp  benchmark_parallel_real.cpp  benchmark_registry.hpp  benchmark_runner.hpp  benchmark_wide.cpp
